Added lab7
Implemented all REST API methods
